# kubernetes-learning

./: README.md
example_app/: Dockerfile  example-app-deployment.yaml
example_app/example_app/: main.py
example_multi_services/service_01/: Dockerfile  pyproject.toml  service-01-deployment.yaml
example_multi_services/service_02/: pyproject.toml  service-02-deployment.yaml
example_multi_services/service_02/example_app/: main.py
multi-instance-tenancy/: REAME.md  deployment-1.yaml  deployment-2.yaml
multi-instance-tenancy/app/: Dockerfile  pyproject.toml
multi-instance-tenancy/app/example_app/: main.py
multi-instance-tenancy/db/: docker-compose.yml
multi-instance-tenancy/provisioning-server/: api.py  db.py  k8s.py  main.py  models.py  pyproject.toml  test.http
