[tool.poetry]
name = "provisioning-server"
version = "0.1.0"
description = ""
authors = ["JulianSobott <julian.sobott@frachtwerk.de>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
kubernetes = "^25.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
